ikiwiki (3.03) UNRELEASED; urgency=low

  * Avoid feeding decoded unicode to Term::ReadLine.
    Closes: 512169

 -- Joey Hess <joeyh@debian.org>  Sun, 18 Jan 2009 14:50:57 -0500

ikiwiki (3.02) unstable; urgency=low

  * blogspam: New plugin, adding spam filtering for page editing / comment
    posting using the BlogSpam.net API.
  * Add auto-blog.setup, which will set up an ikiwiki instance tuned for use
    in blogging.
  * checkcontent: New hook, can be used to implement arbitrary content
    filters, including spam filters.
  * table: Fix misparsed links in external files.
  * table: Find links in external files in scan pass.
  * rename: Show full names of affected pages.
  * comments: Fix cache avoidance hack.
  * repolist: New plugin to support the rel=vcs-* microformat.
  * goodstuff: Include repolist by default. (But it does nothing until
    configured with the repository locations.)
  * comments: Add support for removing comments via web interface. (smcv)
  * Consistently allow use of relative paths in all PageSpecs
    that take a page name parameter. Previously, match_created_before(),
    match_created_after(), match_sourcepage(), and match_destpage()
    did not support that, and the docs were not clear.
  * pinger: Get whole url, don't just head, avoids problems on
    the nostromo web server.
  * Recommend libterm-readline-gnu-perl since that makes auto.setup
    behave better.

 -- Joey Hess <joeyh@debian.org>  Sat, 17 Jan 2009 18:19:39 -0500

ikiwiki (3.01) unstable; urgency=low

  * ikiwiki-makerepo: Fix injecting of empty mercurial and bzr repositories.
    Closes: #510518
  * Fix documentation about git hook to use right name. Closes: #510393
  * yesno: Always accept English even when localised.
  * yesno: Also accept 1 and 0 as input.
  * A recent change to gitweb removed support for the form of diffurl 
    that many ikiwiki setups use. Document how to use the new url form.

 -- Joey Hess <joeyh@debian.org>  Mon, 05 Jan 2009 18:53:50 -0500
